# asaki-yumemishi

./: .gitignore  COPYRIGHT  README.md
attic/sample/: literal.cxx  sample.hpp  sample0.cxx  utilexp.cxx
attic/src/main/include/: fmp.hpp
attic/src/main/include/fmp/: compose.hpp  curry.hpp  functor.hpp  incubation.hpp  list.hpp  list_fwd.hpp  maybe.hpp  monoid.hpp  primitive.hpp  sequence.hpp  sequence_fwd.hpp
attic/src/main/include/fmp/detail/: curry_impl.hpp  eval_impl.hpp  list_impl.hpp
attic/src/main/include/literal/fwd/: basic_string.hpp
attic/src/tests/: apply_test.cxx  basic_string.cxx  basic_test.cxx  fmp_test.hpp
parser/: .clang-format  .gitignore  CMakeLists.txt  Readme.adoc  clang.cmake
parser/include/: parser.hpp
parser/include/parsey/: error.hpp  facade.hpp  locator.hpp  parse.hpp  result.hpp  source.hpp  util.hpp
parser/include/parsey/detail/: parse.hpp  result.hpp  source.hpp  util.hpp
parser/include/parsey/fwd/: error.hpp  locator.hpp  parse.hpp  result.hpp  source.hpp
parser/sample/: CMakeLists.txt  sample001.cxx
parser/tests/: CMakeLists.txt  CMakeLists.txt.in  googletest-download.cmake  testError.cxx  testLocator.cxx  testParse0.cxx  testParse1.cxx  testResult.cxx  testSource.cxx  testUtils.cxx  test_Error.cxx  test_Locator.cxx  tool.hpp
sample/: .gitignore  Makefile  literal.cxx  literal0.cxx  sample.hpp  sample0.cxx  sample_lib.cxx  utilexp.cxx
src/main/: Doxyfile
src/main/include/: fmp.hpp
src/main/include/fmp/: apply.hpp  check.hpp  compose.hpp  compose_fwd.hpp  curry.hpp  eval.hpp  eval_fwd.hpp  foldmap.hpp  functor_fwd.hpp  incubation.hpp  list.hpp  list_fwd.hpp  maybe.hpp  maybe_fwd.hpp  monoid.hpp  monoid_fwd.hpp  operator.hpp  operators_fwd.hpp  primitive.hpp  sequence.hpp  utils.hpp  utils_fwd.hpp  values.hpp
src/main/include/fmp/detail/: apply_impl.hpp  check_impl.hpp  compose_impl.hpp  curry_impl.hpp  eval_impl.hpp  fold.hpp  foldmap_impl.hpp  list_impl.hpp  maybe_impl.hpp  monoid_impl.hpp  operator_impl.hpp  sequence.hpp  sequence_impl.hpp
src/main/include/literal/: basic_string.hpp
src/sample/: Makefile
src/tests/: .gitignore  Makefile  apply_test.cxx  basic_string.cxx  basic_test.cxx  compose_test.cxx  curry_test.cxx  fmp_test.cxx  fmp_test.hpp  value_test.cxx
